GHO-42 add sync upload endpoint
